# hotpp

./: .gitignore  .readthedocs.yaml  README.md  log.txt  pyproject.toml
docs/: environment.yml
docs/source/: conf.py  examples.rst  index.rst  install.rst
examples/carbon/: carbon.ipynb  input.yaml  metadata.yaml
examples/water/: dipole.yaml  lammps-infer.pt  log.txt  metadata.yaml  polar.yaml  water.ipynb
examples/water/outDir1/: allpara.yaml  log.txt
examples/water/outDir2/: allpara.yaml  log.txt
examples/water/outDir2/lightning_logs/version_0/: events.out.tfevents.1733287548.DESKTOP-ALF08HD.24739.0
examples/water/outDir3/: allpara.yaml  log.txt
examples/water/outDir3/lightning_logs/version_0/: events.out.tfevents.1733287946.DESKTOP-ALF08HD.25949.0
examples/water/outDir4/: allpara.yaml  log.txt
examples/water/outDir4/lightning_logs/version_0/: events.out.tfevents.1733288082.DESKTOP-ALF08HD.26368.0
hotpp/: logger.py  loss.py  utils.py
hotpp/data/: __init__.py  asedata.py  base.py  data_interface.py  dpmd.py  md17.py  ptdata.py  qm7.py  utils.py
hotpp/entrypoints/: eval.py  freeze.py  main.py  plot.py  train.py  transform.py
hotpp/layer/: base.py  embedding.py  equivalent.py  radial.py  readout.py  rotate.py  utils.py
hotpp/model/: __init__.py  base.py  ground_energy.py  miao.py  miaomiao.py  model_interface.py  spin.py  spinmiao.py
interface/ase/: ase.py  hotase.py
interface/lammps/cmake/: CMakeLists.txt
interface/lammps/src/: pair_miao.cpp
tools/: spectrum.py
